paas and saas layer

--- a/Module-1/1.2-Foundations-Cloud-Networking.md
+++ b/Module-1/1.2-Foundations-Cloud-Networking.md
@@ -47,7 +47,7 @@
 2.  **PaaS (Platform as a Service):**
 
     - PaaS offers a platform for developing, running, and managing applications without dealing with the complexity of underlying infrastructure.
-    - It abstracts away the hardware and operating system, allowing developers to focus on coding.
+    - It abstracts away the infrastructure layer (IaaS) from the user. Dont worry about the infrastructure, focus only on to build, deploy, and manage applications entirely in the cloud.
     - **Example:** AWS Elastic Beanstalk.
     - **Use Case:** Streamlines application deployment, allowing developers to focus on writing code.
 
@@ -55,5 +55,6 @@
 
     - SaaS delivers software applications over the internet, eliminating the need for users to install, maintain, and manage the software locally.
     - Users access the software through a web browser.
+    - SaaS abstracts both PaaS and IaaS layers from the end-user.
     - **Example:** AWS SaaS offerings like Amazon WorkMail.
     - **Use Case:** Users access applications without worrying about maintenance or management.
