--- a/Module-1/1.2-Foundations-Cloud-Networking.md
+++ b/Module-1/1.2-Foundations-Cloud-Networking.md
@@ -39,7 +39,7 @@
 
 1.  **IaaS (Infrastructure as a Service):**
 
-    - IaaS provides virtualized computing resources over the internet.
+    - IaaS provides virtualized computing resources over the internet. **Dont worry about the physical hardware componets.**
     - Instead of managing physical hardware, users can rent virtual machines, storage, and networking components.
     - **Example:** EC2 instances, S3 storage.
     - **Use Case:** Gives you full control over the infrastructure, allowing you to manage and configure the environment.
@@ -47,7 +47,7 @@
 2.  **PaaS (Platform as a Service):**
 
     - PaaS offers a platform for developing, running, and managing applications without dealing with the complexity of underlying infrastructure.
-    - It abstracts away the infrastructure layer (IaaS) from the user. Dont worry about the infrastructure, focus only on to build, deploy, and manage applications entirely in the cloud.
+    - It abstracts away the infrastructure layer (IaaS) from the user. **Dont worry about the infrastructure**, focus only on to build, deploy, and manage applications entirely in the cloud.
     - **Example:** AWS Elastic Beanstalk.
     - **Use Case:** Streamlines application deployment, allowing developers to focus on writing code.
 
