--- a/Module-1/1.2-Foundations-Cloud-Networking.md
+++ b/Module-1/1.2-Foundations-Cloud-Networking.md
@@ -4,12 +4,14 @@
 
 1.  **Overview:**
 
-    - **Definition:** ELB automatically distributes incoming application traffic across multiple targets, such as EC2 instances.
+    - **Definition:** ELB automatically **distributes incoming application traffic across multiple targets**, such as EC2 instances.
+
     - **Purpose:** Enhance fault tolerance, improve availability, and ensure even distribution of traffic.
 
 2.  **Types of Load Balancers:**
 
     - **Application Load Balancer (ALB):** Operates at the application layer (Layer 7) and is ideal for HTTP/HTTPS traffic. Supports content-based routing.
+
     - **Network Load Balancer (NLB):** Operates at the transport layer (Layer 4) and is suitable for TCP/UDP traffic. Offers high performance and low latency.
 
 3.  **Key Features:**
